Safari365 Prod/src/objects/SRV__c.object
<CustomObject>
    <fields>
        <fullName>ANALYSIS1__c</fullName>
        <label>ANALYSIS1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANALYSIS2__c</fullName>
        <label>ANALYSIS2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANALYSIS3__c</fullName>
        <label>ANALYSIS3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CODE__c</fullName>
        <externalId>true</externalId>
        <label>CODE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MESSAGE_CODE__c</fullName>
        <label>MESSAGE_CODE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Markup_Value__c</fullName>
        <label>Markup Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAME__c</fullName>
        <label>NAME</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SRV</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CODE__c</columns>
        <columns>NAME__c</columns>
        <columns>Markup_Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SRV-{00000000}</displayFormat>
        <label>SRV Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SRVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>